ahora si me tengo fe

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Probando ando</h1>
     <p>Con polvo de hadas todo es posible</p>
+    <p>Esta es una prueba de Docker</p>
 </body>
 </html>
